--- a/main.css
+++ b/main.css
@@ -202,12 +202,13 @@ ol, li {
   position: relative;
   flex: 0 0 100%;
   width: 100%;
-  background-image: url("");
+  background-image: url("https://dynamic-media-cdn.tripadvisor.com/media/photo-o/13/39/d3/0d/20180609-141818-largejpg.jpg?w=1200&h=-1&s=1");
   counter-increment: item;
 }
 
 .carousel__slide:nth-child(even) {
-  background-color: #99f;
+  background-image: url("https://www.asia-hikes.com/wp-content/uploads/2021/06/iStock-1273005120-1024x1024.jpg");
+
 }
 
 .carousel__slide:before {
