--- a/restoran.css
+++ b/restoran.css
@@ -12,6 +12,7 @@ body {
     top: 0;
     left: 0;
     background-color: #111;
+    background-color: rgba(0, 0, 0, 0.5);
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
@@ -104,5 +105,99 @@ body {
     font-family: HelveticaNeueCyr,Helvetica Neue,Helvetica,Arial,sans-serif;
   }
   .container{
-    padding: 2% 4%;
+    padding: 3% 4%;
+  }
+/*------------Picture-------------*/
+.row{
+  display: flex;
+   justify-content: space-around;
+   margin: 0 -3%;
+  
+}
+.col_1{
+  display: block;
+  width: 27%;
+  height: 15rem;
+  /* background-color: rgb(81, 75, 75); */
+  background-color: rgba(0, 0, 0, 0.3);
+  margin: 2% 0.25%;
+  position: relative;
+  
+
+  
+}
+/* .media{*/
+  /* border-radius: 10px; */
+  
+.restourand_img{
+  background-image: url(./restaurantPicture/5f2290bca043b36077864287b36e13ba.png);
+
+  position: absolute;
+  background-size: cover;
+  background-position: top center;
+
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+
+  border-radius: 20px;
+  
+}
+
+.media_content{
+  position: absolute;
+  color: white;
+  font-size: 26px;
+  line-height: 32px;
+  padding: 32px;
+}
+.media_content_wrap{
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  margin-bottom: 24px;
+  position: relative;
+}
+  
+
+/* .img{
+  background-position: 50%;
+  background-size: cover;
+  bottom: -1px;
+  left: -1px;
+  position: absolute;
+  right: -1px;
+  top: -1px;
+  z-index: -1;
+  
+
+} */
+  /*---------------------restoran button main-----------------------------------*/
+/*   
+  btn.btn-hollow {
+    border: 2px solid #fff;
+    border-radius: 8px;
+    color: #fff;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 22px;
+    padding: 21px 24px;
+}
+
+  @media(max-width: 1279.98px){
+    .section-restaurands .btn-block {
+        display: block;
+    }
+  } */
+
+  @media (min-width: 1000px) {
+    .row{
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      
+    }
+    .col_1{
+      width: 100%;
+    }
   }
