--- a/restoran.css
+++ b/restoran.css
@@ -11,8 +11,7 @@ body {
     z-index: 1;
     top: 0;
     left: 0;
-    background-color: #111;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 1);
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
@@ -113,7 +112,7 @@ body {
     z-index: 1;
   }
   .text_title, .text_reklame{
-    color: white;
+    color: black;
     font-family: HelveticaNeueCyr,Helvetica Neue,Helvetica,Arial,sans-serif;
     
   }
