--- a/main.css
+++ b/main.css
@@ -100,11 +100,10 @@ img {vertical-align: middle;}
   position: relative;
 }
 
-/* Next & previous buttons */
 .prev, .next {
   cursor: pointer;
   position: absolute;
-  top: 50%;
+  top: 47%;
   width: auto;
   padding: 16px;
   margin-top: -22px;
@@ -124,7 +123,6 @@ img {vertical-align: middle;}
   background-color: rgba(0,0,0,0.8);
 }
 
-/* Caption text */
 .text {
   color: #f2f2f2;
   font-size: 15px;
@@ -134,15 +132,6 @@ img {vertical-align: middle;}
   width: 100%;
   text-align: center;
 }
-
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
 .dot {
   cursor: pointer;
   height: 15px;
@@ -177,21 +166,126 @@ img {vertical-align: middle;}
 .row_container_2{
   display: flex;
   flex-direction: row;
-  padding-top: 32px;
+  padding-top: 30px;
 
 }
 .main_container{
   display: flex;
   flex-direction: row;
-  padding-top: 120px;
+  padding-top: 50px;
   justify-content: center;
 }
 .half_container{
   display: flex;
   flex-direction: column;
-  padding-left: 40px;
+  padding-left: 60px;
 }
 .main_container  img{
   border-radius: 6%;
 }
+.main_container img{
+  border: 1px solid #b0d3eef9;
+  background-color: #fff;
+}
 
+.main_container img{
+  box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
+  transition: .3s;
+}
+.main_container img:hover {
+  box-shadow: 0px 20px 40px rgba(0,0,0,0.4);
+  transform: scale(1.05,1.05);
+}
+
+.object img{
+  box-shadow: 0px 2px 7px #b0d3ee44;
+  transition: .3s;
+}
+.object img:hover {
+  box-shadow: 0px 7px 14px #b0d3eeda;
+  transform: scale(0.95, 0.95);
+}
+
+#News{
+  font-size: 32px;
+  margin-left: 9vw;
+  color: #212225;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: bold;
+  margin-top: 5%;
+  margin-bottom: 2%;
+  font-weight: bold;
+}
+
+#container {
+  margin-left: 8.5vw;
+  display: flex;
+  height: 100%;
+}
+
+#objects {
+  white-space:nowrap; 
+  overflow-x:scroll;
+  overflow-y:hidden;
+  background-color: rgb(255, 255, 255);
+  width: 59vw;
+  height: 100%;
+  padding-bottom: 2%;
+}
+
+.object{
+  display: inline-block;  
+  padding-left: 1%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.object img {
+  width: 270px;
+  height: 270px;
+  border: 2px solid #b0d3eef9;
+  border-radius: 6%;
+}
+hr{
+  border: 0.1px solid #b0d3eef9;
+  margin-bottom: 4%;
+}
+.right_side_see_all{
+  margin-left: 40px;
+  width: 18.5vw;
+}
+#button_see_all{
+  background-color: #75b6f2;
+  border-color: transparent;
+  border-radius: 10px;
+  width: 100%;
+  height: 6vh;
+  color: white;
+  font-size: 19px;
+  margin-top: 5%;
+}
+.date_div{
+  font-size: 15px;
+  font-family: Inter Regular , sans-serif;
+  color: #6d7784;
+  padding-top: 3%;
+  overflow:hidden;
+  width: 290px;
+  text-overflow: ellipsis;
+}
+.date_div div{
+  margin-top: 3%;
+  font-size: 20px;
+  font-family: Inter Regular , sans-serif;
+  color: #212225;
+}
+
+.object .date_div .text_img{
+  width: 290px;
+  overflow:hidden;
+  text-overflow: ellipsis;
+  padding-bottom: 3%;
+  color: #212225;
+  font-size: 18px;
+  max-height: 50px;
+  font-weight: bold;
+}
