--- a/restoran.css
+++ b/restoran.css
@@ -130,7 +130,7 @@ body {
   display: block;
   width: 27%;
   height: 15rem;
-  background-color: rgb(0, 0 , 0, 0.);
+  background-color: rgb(0, 0 , 0, 0.2);
   margin: 2% 0.25%;
   position: relative;
   border-radius: 20px;
