--- a/restoran.css
+++ b/restoran.css
@@ -147,9 +147,6 @@ body {
   width: 45%;
   height: 15rem;
 }
-/* .media{
-  background-color: rgba(0, 0, 0, 0.1);
-}   */
 .restourand_img{
  
 
@@ -183,49 +180,18 @@ body {
 }
   
 
-/* .img{
-  background-position: 50%;
-  background-size: cover;
-  bottom: -1px;
-  left: -1px;
-  position: absolute;
-  right: -1px;
-  top: -1px;
-  z-index: -1;
-  
-
-} */
-  /*---------------------restoran button main-----------------------------------*/
-/*   
-  btn.btn-hollow {
-    border: 2px solid #fff;
-    border-radius: 8px;
-    color: #fff;
-    font-size: 20px;
-    font-weight: 500;
-    line-height: 22px;
-    padding: 21px 24px;
-}
-
-  @media(max-width: 1279.98px){
-    .section-restaurands .btn-block {
-        display: block;
-    }
-  } */
-
- 
-
-  /*------------footer-----------------*/
   footer {
-    background-color: #484848;
-    color: white;
-    padding:2% 0;
+    background-color: #1f1f1f;
+    color: rgba(218, 216, 216, 0.933);
+    padding: 2% 0;
     display: flex;
     justify-content: center;
+    border-radius: 15px 15px 0 0;
 }
 
 footer li {
     padding-top: 3%;
+    list-style-type: none;
 }
 
 .f-1 {
@@ -235,11 +201,16 @@ footer li {
 
 .f-1 div {
     width: 50%;
-    min-width: 60%;
+    min-width: 20%;
 }
 
 footer a {
-    color: white;
+    color: rgba(125, 123, 123, 0.959);
+    text-decoration: none;
+}
+
+.span span{
+  padding-left: 5%;
 }
 
 @media only screen and (max-width: 1100px) {
