--- a/hews.css
+++ b/hews.css
@@ -1,59 +1,94 @@
-.news_img_9photos_div{
-    display: flex;
-    flex-direction: column;
-    max-width: 100%;
-    margin-bottom: 3%;
+.Newsid{
+  font-size: 32px;
+  margin-left: 10vw;
+  color: #212225;
+  font-family: Inter Regular , sans-serif;
+  font-weight: bold;
+  margin-top: 5%;
+  margin-bottom: 2%;
+  font-weight: bold;
 }
-.news_img_3photos_div{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-content: space-around;
-    padding-left: 7%;
-    padding-right: 7%;
-    margin-bottom: 7%;
+
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
-.news_img_3photos_div img{
-    max-width: 26.25vw;
-    height: 100%;
-    border-radius: 1.6vw;
+body{
+  font-family: "Inter Regular", sans-serif;
+  font-style: normal;
 }
 
 
-.date_div{
-    font-size: 15px;
-    font-family: Inter Regular , sans-serif;
-    color: #6d7784;
-    overflow:hidden;
-    width: 300px;
-    text-overflow: ellipsis;
-    position:absolute;
+.news_wrapper{
+  font-size: 16px;
+  display: flex;
+  flex-wrap: wrap;
+  width: 80%;
+  height: auto;
+  grid-gap: 24px;
+  gap: 24px;
+  margin: 48px auto;
 }
-  .news_img_div .date_div .text_img{
-    width:300px;
-    overflow:hidden;
-    text-overflow: ellipsis;
-    color: #212225;
-    font-size: 18px;
-    max-height: 50px;
-    font-weight: bold;
+
+.news_wrapper .hotel-link{
+  width: calc(33.33333% - 20px);
+  align-items: center;
+  color: black;
+  text-decoration: none;
+}
+
+.news_wrapper .hotel-link .one_hotel{
+  cursor: pointer;
+  width: 100%;
+}
+
+.news_wrapper .one_hotel img{
+  width: 100%;
+  height: 290px;
+  background: #fff;
+  border-radius: 20px;
+  overflow: hidden;
+  padding: 0;
+  margin-bottom: 16px;
+  transition: .2s;
+}
+
+.news_wrapper .hotel-link .one_hotel .hotel-data{
+  display: block;
+}
+
+.news_wrapper .hotel-link .one_hotel .hotel-data .hotel-data-desc{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-weight: 500;
+  font-size: 21px;
+  color: #212225;
+  margin-bottom: 8px;
+}
+.news_wrapper .hotel-link .one_hotel .hotel-data .hotel-data-les{
+  color: #6d7784;
+  margin-bottom: 8px;
+}
+
+.one_hotel img{
+  box-shadow: 0px 2px 7px #000000ae;
+  transition: .3s;
+
+}
+.one_hotel img:hover {
+  box-shadow: 0px 7px 14px #b0d3eeda;
+  transform: scale(1.05, 1.05);
+}
+
+@media (max-width: 1164px){
+  .news_wrapper .hotel-link{
+      width: calc(50% - 12px);
   }
-  #News{
-    font-size: 32px;
-    margin-left: 9vw;
-    color: #212225;
-    font-family: Inter Regular , sans-serif;
-    font-weight: bold;
-    margin-top: 5%;
-    margin-bottom: 2%;
-    font-weight: bold;
+}
+@media (max-width: 760px){
+  .news_wrapper .hotel-link{
+      width: 100%;
   }
-  .news_img_9photos_div img{
-    box-shadow: 0px 2px 7px #000000ae;
-    transition: .3s;
-  
-  }
-  .news_img_9photos_div img:hover {
-    box-shadow: 0px 7px 14px #b0d3eeda;
-    transform: scale(1.05, 1.05);
-  }
+}
