--- a/homepage.css
+++ b/homepage.css
@@ -1,3 +1,29 @@
+
+@media only screen and (max-width: 800px) {
+  .main_container, #container {
+      display: flex;
+      flex-wrap: wrap;
+  }
+
+  .right_side_see_all {
+      margin-left: 0px;
+  }
+  .f-1 {
+      justify-content: center;
+      padding-left: 15%;
+      width: 80%;
+      margin-bottom: 5%;
+  }
+
+  .f-1 div {
+      min-width: 60%;
+  }
+
+  footer {
+      display: block;
+  }
+}
+
 body {
   font-family: "Lato", sans-serif;
   transition: background-color .5s;
@@ -37,66 +63,100 @@ body {
   margin-left: 50px;
 }
 
+li {
+  list-style-type: none;
+}
+
+.header {
+  display: flex;
+  left: 0;
+  right: 0;
+  justify-content: space-between;
+}
+
+.logo {
+  width: 55px;
+  vertical-align: middle;
+}
+
 #main {
   border: 3px solid #ebeff2;
   border-radius: 12px;
-  padding-left: 0.5%;
-  padding-right: 0.5%;
-  padding-top: 2px;
+  padding: 2px 0;
   background-color: rgb(5, 161, 5);
-  margin-left: 1%;  
-  
+  margin-left: .5%;
+  width: 40px;
+  text-align: center;
 }
 
-.header{
-  display:flex;
+.id {
+  display: flex;
+  min-width: 200px;
 }
-#LIVE_ID, #register_id, #Sign_in_id{
+
+.main {
+  font-size: 25px;
+  cursor: pointer;
+  color: #ebeff2;
+}
+
+
+.header {
+  display: flex;
+}
+
+#register_id, #Sign_in_id {
   border: 3px solid #ebeff2;
   border-radius: 12px;
+  min-width: 80px;
   background-color: #fff;
 }
-#Sign_in_id{
-  margin-right: 4%;
+
+#Sign_in_id {
+  margin-right: 2%;
   padding-left: 1%;
   padding-right: 1%;
   font-size: 18px;
-  padding-top:11px;
+  padding-top: 11px;
   background-color: #75b6f2;
   color: #ebeff2;
-  font-family:Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
-}
-#LIVE_ID{
-  margin-left: 3%;
-  vertical-align:middle;
-  padding-top: 5px;
-  padding-right: 0.5%;
-  padding-left: 0.5%;
-}
-#register_id{
-  margin-right: 1%;
-  padding-top:11px;
-  font-size: 18px;
-  padding-right: 2%;
-  padding-left: 2%;
-  background-color: #fc0;
-  font-family:Arial, Helvetica, sans-serif;
-  font-weight: bold;
-}
-#KOLSAI_ID{
-  padding-left: 1%;
-  padding-right: 1%;
-  font-family:Arial, Helvetica, sans-serif; 
 }
 
-* {box-sizing: border-box}
-.mySlides {display: none}
-img {vertical-align: middle;}
+#register_id {
+  margin-right: 1%;
+  padding-top: 11px;
+  font-size: 18px;
+  padding-right: 1%;
+  padding-left: 1%;
+  background-color: #fc0;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+}
+
+#KOLSAI_ID {
+  min-width: 200px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+* {
+  box-sizing: border-box
+}
+
+img {
+  vertical-align: middle;
+}
 
 .slideshow-container {
-  max-width: 35vw;
+  width: 95%;
+  height: auto;
   position: relative;
+}
+
+.element {
+  width: 100%;
+  height: 600px;
 }
 
 .prev, .next {
@@ -115,11 +175,12 @@ img {vertical-align: middle;}
 }
 
 .next {
-  right: -5.5%;
+  right: 0%;
   border-radius: 3px 0 0 3px;
 }
+
 .prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.3);
+  background-color: rgba(0, 0, 0, 0.3);
 }
 
 .text {
@@ -131,6 +192,7 @@ img {vertical-align: middle;}
   width: 100%;
   text-align: center;
 }
+
 .dot {
   cursor: pointer;
   height: 15px;
@@ -152,66 +214,74 @@ img {vertical-align: middle;}
 }
 
 @keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
+  from {
+      opacity: .4
+  }
+  to {
+      opacity: 1
+  }
 }
 
-
-
-.row_container_1{
-  display: flex;
-  flex-direction: row;
+.cont {
+  width: 100%;
+  height: 243px;
 }
-.row_container_2{
-  display: flex;
-  flex-direction: row;
-  padding-top: 1.875vw;
 
-}
-.main_container{
+.row_container_1 {
+  width: 100%;
   display: flex;
-  flex-direction: row;
-  padding-top: 3.125vw;
+  padding-bottom: 4%;
+}
+
+.row_container_1 div {
+  width: 90%;
+  margin-right: 5%;
+}
+
+.main_container {
+  width: 80%;
+  display: flex;
+  padding-top: 50px;
   justify-content: center;
+  margin-left: 10%;
 }
-.half_container{
+
+.half_container {
   display: flex;
   flex-direction: column;
-  padding-left: 3.75vw;
-}
-.main_container  img{
-  border-radius: 6%;
-}
-.main_container img{
-  border: 1px solid #b0d3eef9;
-  background-color: #fff;
+  padding-left: 3%;
 }
 
-.main_container img{
-  box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
+.main_container img {
+  border-radius: 6%;
+  border: 1px solid #b0d3eef9;
+  background-color: #fff;
+  box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
   transition: .3s;
   cursor: pointer;
 }
+
 .main_container img:hover {
   box-shadow: 0px 7px 14px #000000;
   transform: scale(1.05, 1.05);
 }
 
-.object img{
+.object img {
   box-shadow: 0px 2px 7px #000000ae;
   transition: .3s;
 
 }
+
 .object img:hover {
   box-shadow: 0px 7px 14px #b0d3eeda;
   transform: scale(0.95, 0.95);
 }
 
-.Newsid{
+.News {
   font-size: 32px;
   margin-left: 9vw;
   color: #212225;
-  font-family: Inter Regular , sans-serif;
+  font-family: Inter Regular, sans-serif;
   font-weight: bold;
   margin-top: 5%;
   margin-bottom: 2%;
@@ -219,27 +289,28 @@ img {vertical-align: middle;}
 }
 
 #container {
-  margin-left: 8.5vw;
   display: flex;
   height: 100%;
+  padding: 0 8%;
 }
 
 #objects {
-  white-space:nowrap; 
-  overflow-x:scroll;
-  overflow-y:hidden;
+  white-space: nowrap;
+  overflow-x: scroll;
+  overflow-y: hidden;
   background-color: rgb(255, 255, 255);
-  width: 59vw;
+  width: 90%;
   height: 100%;
   padding-bottom: 2%;
 }
 
-.object{
-  display: inline-block;  
+.object {
+  display: inline-block;
   padding-left: 1%;
   overflow: hidden;
   text-overflow: ellipsis;
 }
+
 .object img {
   width: 270px;
   height: 270px;
@@ -247,15 +318,18 @@ img {vertical-align: middle;}
   border-radius: 6%;
 
 }
-hr{
+
+hr {
   border: 0.1px solid #b0d3eef9;
   margin-bottom: 4%;
 }
-.right_side_see_all{
-  margin-left: 40px;
+
+.right_side_see_all {
+  margin-left: 2%;
   width: 18.5vw;
 }
-#button_see_all{
+
+#button_see_all {
   background-color: #75b6f2;
   border-color: transparent;
   border-radius: 10px;
@@ -266,28 +340,27 @@ hr{
   margin-top: 5%;
   cursor: pointer;
 }
-.date_div{
+
+.date_div {
   font-size: 15px;
-  font-family: Inter Regular , sans-serif;
+  font-family: Inter Regular, sans-serif;
   color: #6d7784;
   padding-top: 3%;
-  overflow:hidden;
-  width: 290px;
+  overflow: hidden;
+  width: 250px;
   text-overflow: ellipsis;
 }
-.date_div a{
-  text-decoration: none;
-}
-.date_div div{
+
+.date_div div {
   margin-top: 3%;
   font-size: 20px;
-  font-family: Inter Regular , sans-serif;
+  font-family: Inter Regular, sans-serif;
   color: #212225;
 }
 
-.object .date_div .text_img{
+.object .date_div .text_img {
   width: 290px;
-  overflow:hidden;
+  overflow: hidden;
   text-overflow: ellipsis;
   padding-bottom: 3%;
   color: #212225;
@@ -297,60 +370,103 @@ hr{
 }
 
 
-.main_menu_div{
-  display: flex;
-  flex-wrap: wrap;
-  grid-gap: 24px;
-  gap: 24px;
-  width: 100%;
-  justify-content: center;
-  padding-bottom: 10%;
+
+h1 {
+  top: 8%;
+  position: absolute;
+  padding-left: 8%;
+  padding-right: 8%;
+  font-size: 2.4vw;
+  font-family: Inter Regular, sans-serif;
+  color: #ffffffdf;
 }
 
-.main_menu_div div img{
+h2 {
+  font-size: 20px;
+  font-family: Inter Regular, sans-serif;
+}
+
+h3 {
+  position: absolute;
+  padding-right: 8%;
+  padding-left: 3%;
+  font-size: 30px;
+  font-family: Inter Regular, sans-serif;
+  color: #ffffffdf;
+  z-index: 1;
+  margin-top: -60px;
+}
+
+.in-2 {
+  height: auto;
+  padding-top: 5%;
+  padding-bottom: 5%;
+  padding-left: 3%;
+}
+
+.single {
+  display: flex;
+  padding-top: 3%;
+}
+
+.single div {
   width: 100%;
-  height: 100%;
 }
-.main_menu_div div{
-  display: block;
-  max-height: 300px;
-  cursor: pointer;
-}
-.main_menu_div div img{
+
+.in-2 img {
+  height: 400px;
+  width: 95%;
+  border-radius: 25px;
   box-shadow: 0px 2px 7px #b0d3ee44;
   transition: .3s;
-  border-radius: 12px;
   border: 0.1px solid #b0d3eef9;
 }
-.main_menu_div div img:hover {
+.in-2 img:hover{
   box-shadow: 0px 7px 14px #b0d3eeda;
   transform: scale(1.05, 1.05);
 }
-h1{
-  top: 8%;
-  position:absolute;
-  padding-left: 8%;  
-  padding-right: 8%;  
-  font-size: 2.4vw;
-  font-family: Inter Regular , sans-serif;
-  color: #ffffffdf;
+
+.row-1, .row-2, .row-3 {
+  display: flex;
+  padding-top: 2%;
 }
-h2{
-  top: 25%;
-  position:absolute;
-  padding-right: 8%;  
-  padding-left: 3%;
-  font-size: 2.4vw;
-  font-family: Inter Regular , sans-serif;
-  color: #ffffffdf;
+
+.row-1 div, .row-2 div, .row-3 div {
+  margin-right: -1.4%;
 }
-.main_menu_div div h3{
-  position:absolute;
-  padding-right: 8%;  
-  padding-left: 3%;
-  font-size: 30px;
-  font-family: Inter Regular , sans-serif;
-  color: #ffffffdf;
-  z-index: 1;
-  margin-top: -4vw;
+
+.double div {
+  width: 100%;
+  padding-right: .6%;
+}
+.f-1 {
+  width: 40%;
+  display: flex;
+}
+
+.f-1 div {
+  width: 50%;
+  min-width: 20%;
+}
+
+a{
+  text-decoration: none;
+}
+footer {
+  background-color: #1f1f1f;
+  color: rgba(218, 216, 216, 0.933);
+  padding: 2% 0;
+  display: flex;
+  justify-content: center;
+  border-radius: 15px 15px 0 0;
+}
+
+footer li {
+  padding-top: 3%;
+  list-style-type: none;
+}
+
+footer a {
+  color: rgba(125, 123, 123, 0.959);
+  text-decoration: none;
 }
