--- a/restaurants.css
+++ b/restaurants.css
@@ -1,6 +1,6 @@
 .Newsid{
   font-size: 32px;
-  margin-left: 16.5vw;
+  margin-left: 10vw;
   color: #212225;
   font-family: Inter Regular , sans-serif;
   font-weight: bold;
@@ -8,81 +8,87 @@
   margin-bottom: 2%;
   font-weight: bold;
 }
-.news_container{
+
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+body{
+  font-family: "Inter Regular", sans-serif;
+  font-style: normal;
+}
+
+
+.news_wrapper{
+  font-size: 16px;
   display: flex;
-  justify-content: center;
   flex-wrap: wrap;
+  width: 80%;
+  height: auto;
+  grid-gap: 24px;
+  gap: 24px;
+  margin: 48px auto;
+}
 
-}
-.news{
-  max-width: 800px;
-}
-.news img{
-  width: 100%;
-  height: 400px;
-  border-radius: 16px;
-}
-.more{
-  height: 100%;
-  width: 100%;
-}
-.more {
-  width: 300px;
-  border: 1px solid #dae9f4;
-  border-radius: 20px;
-  padding: 18px 18px 8px;
-  position: sticky;
-  position: -webkit-sticky;
-  top: 80px;
-  margin-bottom: 6%;
-
-}
-a {
-  text-decoration: none;
-  color: #000;
-
-}
-.more-items, .more-news{
-  margin-top: 28px;
-}
-.news{
-  flex-direction: column;
-  justify-content: flex-start;
-  margin-right: 20px;
-}
-.news, .news-container{
-  width: 100%;
-  display: flex;
-  align-items: flex-start;
-}
-.news-image {
-  width: 100%;
-  height: 480px;
-  display: flex;
-  justify-content: center;
+.news_wrapper .hotel-link{
+  width: calc(33.33333% - 20px);
   align-items: center;
-  overflow: hidden;
-  border-radius: 16px;
-  margin-bottom: 32px;
-  position: relative;
+  color: black;
+  text-decoration: none;
 }
-.date{
-  font-weight: 400;
-  font-size: 14px;
+
+.news_wrapper .hotel-link .one_hotel{
+  cursor: pointer;
+  width: 100%;
+}
+
+.news_wrapper .one_hotel img{
+  width: 100%;
+  height: 290px;
+  background: #fff;
+  border-radius: 20px;
+  overflow: hidden;
+  padding: 0;
+  margin-bottom: 16px;
+  transition: .2s;
+}
+
+.news_wrapper .hotel-link .one_hotel .hotel-data{
+  display: block;
+}
+
+.news_wrapper .hotel-link .one_hotel .hotel-data .hotel-data-desc{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-weight: 500;
+  font-size: 21px;
+  color: #212225;
+  margin-bottom: 8px;
+}
+.news_wrapper .hotel-link .one_hotel .hotel-data .hotel-data-les{
   color: #6d7784;
   margin-bottom: 8px;
 }
-.name{
-  margin-bottom: 8px;
-  font-size: 17px;
+
+.one_hotel img{
+  box-shadow: 0px 2px 7px #000000ae;
+  transition: .3s;
+
 }
-hr{
-  border: 0.5px solid #dae9f4;
+.one_hotel img:hover {
+  box-shadow: 0px 7px 14px #b0d3eeda;
+  transform: scale(1.05, 1.05);
 }
-.hotel-data-desc{
-  color: #4f5864e0;
-  font-size: 17px;
-  font-family: "Lato", sans-serif;
-  margin-top: 2%;
-  margin-bottom: 6%;
+
+@media (max-width: 1164px){
+  .news_wrapper .hotel-link{
+      width: calc(50% - 12px);
+  }
+}
+@media (max-width: 760px){
+  .news_wrapper .hotel-link{
+      width: 100%;
+  }
 }
