--- a/welcome.css
+++ b/welcome.css
@@ -27,8 +27,6 @@ body{
     z-index: 1000;
     background-color: rgba(0,0,0, 0.2);
 }
-
-
 nav{
     margin-right: 20px;
     display: flex;
@@ -41,7 +39,6 @@ nav{
     position: fixed;
     top: 0;
     z-index: 1002;
-    
 }
 
 a{
@@ -90,7 +87,6 @@ a:hover{
 
 .videodiv{
     width: 100%;   
-    /* background-color: rgb(0,0,33); */
     margin-bottom: 100px;
     overflow: hidden;
     z-index: 10;
@@ -107,37 +103,25 @@ a:hover{
 .video_media{
     position: absolute;
     top: 0;
-    /* left: 0px; */
     right: 0px;
-
 }
 .video_cover{
    
     position: relative;
     width: 100%;
     height: 100%;
-    
-   
-  
-
 }
 
 .video_cover:after{
-    /* content: "";
-    display: block; */
     width: 100%;
     height: 100%;
     position: absolute;
     top: 0;
-   
 }
 
 .video_content{
-    /* width: 100%;
-    height: 80%; */
     position: absolute;
     top: 70px;
-    /* left: ; */
     z-index: 5;
 }
 
@@ -148,7 +132,6 @@ a:hover{
     margin-left: 300px;
     margin-top: 100px;
     z-index: 7;
-    
 }
 
 .bigboldtext{
@@ -177,10 +160,7 @@ a:hover{
     color: #ffffff;
     word-break: normal;
     margin-bottom: 30px;
-    
 }
-
-
 .innercompanies{
     width: 85%;
     display: flex;
@@ -188,45 +168,10 @@ a:hover{
     align-items: center;
 }
 
-footer{
-    background-color: rgba(0,0,0, 1);
-
-}
-.footer{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 5%;
-    z-index: 1004;
-}
-
-.innerfooter{
-    width: 65%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.buttonfooter{
-    padding: 10px;
-    background-color: transparent;
-    border: 1px solid white;
-    color: white;
-    border-radius: 20px;
-    text-align: center;
-    cursor: pointer;
-}
-
 @media only screen and (max-width: 1342px){
     body{
     overflow-x: hidden;
 
-    }
-    
-    .rightside{
-        /* flex-direction: row; */
     }
     .inputs{
         width: 250px;
@@ -244,7 +189,6 @@ footer{
     background-size: cover;
     width: 100%;
     height: 100vh;
-     
     }
    .firstside{
     width: 100%;
@@ -254,22 +198,9 @@ footer{
  }
 
 @media only screen and (max-width: 900px){
-   
-    /* .video_cover{
-   
-       
-        overflow: hidden;
-        
-      
-    
-    } */
     .firstside{
         width: 1300px;
-        /* margin-top: 500px;
-        margin-left: 300px;*/
         margin-top: 100px; 
-        /* z-index: 7; */
-        
     }
  }
  
@@ -280,12 +211,12 @@ footer{
  }
 
 .icon{
-    margin-left: 30px; width: 5%;
+    margin-left: 30px; width: 10%;
     
 }
  @media only screen and (max-width: 900px){
     .icon{
-        width: 10%;
+        width: 15%;
         height: auto;
     }
  }
@@ -303,7 +234,11 @@ footer{
         margin-bottom: 50px;
     }
     .icon{
-        width: 6%;
+        width: 16%;
         height: auto;
+        margin-left: auto;
+    }
+    .navbutton{
+        padding: 5px 10px 5px 10px;
     }
 }
