--- a/about_us_styles.css
+++ b/about_us_styles.css
@@ -127,8 +127,6 @@ li {
     width: 100%;
     height: auto;
     padding: 3%;
-    /*background-color: #f1eb89;*/
-    /*background-image: linear-gradient(45deg, #f1eb89 17%, #26a2c2 65%);*/
 }
 
 .wrapper h1 {
@@ -139,7 +137,7 @@ li {
 .picture {
     width: 100%;
     height: 50vh;
-    background-image: url("../about_us/login-photo.jpg");
+    background-image: url("https://914141.smushcdn.com/2247443/wp-content/uploads/2021/10/kolsay-lake.jpeg?lossy=1&strip=1&webp=1");
     background-position: 50%;
     background-size: cover;
     border-radius: 20px;
@@ -190,7 +188,7 @@ li {
 .numbers {
     width: 30%;
     height: auto;
-    background-color: bisque;
+    background-color: rgba(36, 192, 239, 0.853);
     border-radius: 10px;
     padding: 2%;
     margin-top: 6%;
@@ -201,59 +199,12 @@ li {
     font-weight: 700;
     letter-spacing: -.02em;
     line-height: 80px;
+    color: white;
 }
 
 .numbers p {
     font-size: 30px;
     font-weight: 500;
     line-height: 37px;
-    color: #363636;
-}
-
-
-footer {
-    background-color: #1f1f1f;
-    color: rgba(218, 216, 216, 0.933);
-    padding: 2% 0;
-    display: flex;
-    justify-content: center;
-    border-radius: 15px 15px 0 0;
-}
-
-
-.f-1 {
-    width: 40%;
-    display: flex;
-}
-
-.f-1 div {
-    width: 50%;
-    min-width: 20%;
-}
-
-footer li {
-    padding-top: 3%;
-    list-style-type: none;
-}
-
-footer a {
-    color: rgba(125, 123, 123, 0.959);
-    text-decoration: none;
-}
-
-@media screen and (max-width: 800px) {
-    .f-1 {
-        justify-content: center;
-        padding-left: 15%;
-        width: 80%;
-        margin-bottom: 5%;
-    }
-
-    .f-1 div {
-        min-width: 60%;
-    }
-
-    footer {
-        display: block;
-    }
+    color: #ecececeb;
 }
