--- a/homepage.css
+++ b/homepage.css
@@ -1,8 +1,12 @@
-
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 1100px) {
   .main_container, #container {
       display: flex;
       flex-wrap: wrap;
+  }
+  .mySlides  h1{
+    font-size: 5vw;
+  }.in-2  h3{
+    font-size: 2.5vw;
   }
 
   .right_side_see_all {
@@ -23,6 +27,95 @@
       display: block;
   }
 }
+@media only screen and (max-width: 950px) {
+  .main_container, #container {
+      display: flex;
+      flex-wrap: wrap;
+  }
+  .row-1, .single{
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .row-1 div, .single div{
+    padding-top: 2%;
+  }
+  .mySlides  h1{
+    font-size: 4vw;
+  }.in-2  h3{
+    font-size: 3vw;
+  }
+
+  .right_side_see_all {
+      margin-left: 0px;
+  }
+  .f-1 {
+      justify-content: center;
+      padding-left: 15%;
+      width: 80%;
+      margin-bottom: 5%;
+  }
+
+  .f-1 div {
+      min-width: 60%;
+  }
+
+  footer {
+      display: block;
+  }
+}
+@media only screen and (max-width: 570px) {
+  .main_container, #container {
+      display: flex;
+      flex-wrap: wrap;
+  }
+  .row-1, .single{
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .row-1 div, .single div{
+    padding-top: 2%;
+  }
+  .mySlides  h1{
+    font-size: 4vw;
+  }.in-2  h3{
+    font-size: 5vw;
+  }
+  .mySlides .element {
+    width: 100%;
+    height: 300px;
+  }
+
+  .row_container_1 .cont {
+    height: 50vw;
+  }
+  #container {
+    padding: 0 ;
+    justify-content: center;
+  }
+  .row_container_1{
+    flex-wrap: wrap;
+    height: 100%;
+  }
+  .right_side_see_all {
+      margin-left: 0px;
+  }
+  .f-1 {
+      justify-content: center;
+      padding-left: 15%;
+      width: 80%;
+      margin-bottom: 5%;
+  }
+
+  .f-1 div {
+      min-width: 60%;
+  }
+
+  footer {
+      display: block;
+  }
+}
+
+
 
 body {
   font-family: "Lato", sans-serif;
@@ -158,6 +251,7 @@ img {
   width: 100%;
   height: 600px;
 }
+
 
 .prev, .next {
   cursor: pointer;
@@ -326,7 +420,7 @@ hr {
 
 .right_side_see_all {
   margin-left: 2%;
-  width: 18.5vw;
+  width: 300px;
 }
 
 #button_see_all {
@@ -369,8 +463,6 @@ hr {
   font-weight: bold;
 }
 
-
-
 h1 {
   top: 8%;
   position: absolute;
@@ -395,6 +487,11 @@ h3 {
   color: #ffffffdf;
   z-index: 1;
   margin-top: -60px;
+}
+@media (max-width: 1000px) {
+  h3{
+    font-size: 2vw;
+  }
 }
 
 .in-2 {
@@ -469,4 +566,7 @@ footer li {
 footer a {
   color: rgba(125, 123, 123, 0.959);
   text-decoration: none;
+}
+@media (max-width: 650px){
+
 }
