--- a/homepage.css
+++ b/homepage.css
@@ -567,6 +567,13 @@ footer a {
   color: rgba(125, 123, 123, 0.959);
   text-decoration: none;
 }
-@media (max-width: 650px){
 
+.buttonss  button {
+  box-shadow: 0px 2px 7px #000000ae;
+  transition: .3s;
+}
+
+.buttonss  button:hover {
+  box-shadow: 0px 7px 14px #8fc9f5f2;
+  transform: scale(1.15, 1.15);
 }
