--- a/ticket.css
+++ b/ticket.css
@@ -241,3 +241,22 @@ footer a {
         display: block;
     }
 }
+.ticket {
+    box-shadow: 0px 2px 7px #000000ae;
+    transition: .3s;
+  }
+  
+  .ticket:hover {
+    box-shadow: 0px 7px 14px #8fc9f5f2;
+    transform: scale(1.15, 1.15);
+  }
+
+  .ticket img{
+    box-shadow: 0px 2px 7px #000000ae;
+    transition: .3s;
+  }
+  
+  .ticket img:hover {
+    box-shadow: 0px 7px 14px #c6045bdb;
+    transform: scale(1.15, 1.15);
+  }
